--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/style.css">
     <script src="js/tree.js"></script>
     <script src="js/main.js"></script>
+	<link href="./favicon.ico" rel="icon" type="image/x-icon"/>
   </head>
   <body>
     <h1>
